--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/flag-icon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/images/earth.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="An app that lets you search and learn facts about countries"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/flag-icon.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/earth.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
